--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "underscore": "1.13.1"
+    "underscore": "1.13.1",
+    "mocha": "^9.0.0"
   },
   "devDependencies": {
     "grunt": "0.4.5",
