--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
   "main": "./index.js",
   "dependencies": {
     "underscore": "1.13.1",
-    "mocha": "^9.0.0"
   },
   "devDependencies": {
-    "grunt": "0.4.5",
-    "grunt-mocha-test": "0.12.4",
-    "grunt-release": "^0.14.0"
+    "mocha": "^9.0.1",
+    "release-it": "^14.10.0"
+  },
+  "scripts": {
+    "release": "release-it",
+    "test": "mocha tests/**.js"
   },
   "engines": {
     "node": ">=0.8"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
