--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,9 +15,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-      - run: npm i
-      - run: npm ci
-      - run: npm test
+      - run: npm i -g yarn
+      - run: yarn
+      - run: rm -rf node_modules && yarn install --frozen-lockfile
+      - run: yarn test
 
   publish-npm:
     needs: build
@@ -28,7 +29,9 @@ jobs:
         with:
           node-version: 14
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
+      - run: npm i -g yarn
+      - run: yarn
+      - run: rm -rf node_modules && yarn install --frozen-lockfile
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
